# igniter

./: .gitignore  CMakeLists.txt  igniter.cpp  sample.ing
compiler/: CMakeLists.txt
compiler/lex/: igniter.l  igniter.yxx
compiler/src/: AstContext.cpp  AstContext.h  KaleidoscopeJIT.h  jitRun.cpp  lex.cpp  lex.h
compiler/src/ast/: AstList.cpp  AstList.h  AstNode.h  AstPackage.cpp  AstPackage.h  AstValAssign.cpp  AstValAssign.h  AstVariable.cpp  AstVariable.h
compiler/src/ast/expression/: AstArrayExpr.h  AstBinaryExpr.cpp  AstBinaryExpr.h  AstBlockExpr.cpp  AstBlockExpr.h  AstBoolean.h  AstCallExpr.cpp  AstCallExpr.h  AstIfExpr.cpp  AstIfExpr.h  AstIndexExpr.cpp  AstIndexExpr.h  AstLambdaExpr.cpp  AstLambdaExpr.h  AstNumber.cpp  AstNumber.h  AstReturn.h  AstUnaryExpr.cpp  AstUnaryExpr.h  AstUnitExpr.cpp  AstUnitExpr.h
compiler/src/ast/function/: AstFunctionDef.cpp  AstFunctionDef.h  AstVariableDef.cpp  AstVariableDef.h
compiler/src/codegen/: BlockGen.h  CodeGen.cpp  CodeGen.h  FunctionGen.cpp  FunctionGen.h
compiler/src/codegen/expression/: ArrayGen.cpp  ArrayGen.h  BinaryGen.cpp  BinaryGen.h  BooleanGen.cpp  BooleanGen.h  CallGen.cpp  CallGen.h  IfGen.cpp  IfGen.h  IndexGen.cpp  IndexGen.h  NumGen.cpp  NumGen.h  ReturnGen.cpp  ReturnGen.h  UnaryGen.cpp  UnaryGen.h  UnitGen.h
compiler/src/codegen/function/: ParamGen.cpp  ParamGen.h
compiler/src/type/: AstType.h  TypeManager.cpp  TypeManager.h
core/: core.cpp  core.h
stdlib/: putchar.cpp
